# PG_MSD

./: .gitignore  .gitmodules  CMakeLists.txt  Clustering.ipynb  Makefile  README.md  dummy_cal.txt  dummy_cal_full.txt  full_cal.txt  langausfit.C  miniTRB read binary.ipynb  proper_cal.txt  proper_cal_fixed.txt  python_online_monitor.py  python_raw_viewer.py  python_raw_viewer_requirements.txt  simple_cal.txt  test_settings.json  wrap.sh
Python/: Clustering.ipynb  FOOT read binary.ipynb  FOOT_MSD.py  Plot Calibration.ipynb  miniTRB read binary.ipynb  miniTRB.py
Python/.ipynb_checkpoints/: Clustering-checkpoint.ipynb
Root/: ASTRA_VTPscan_toPY.C  FOOT_compress  Makefile  batch_clusterize.sh~  guiDict.cpp  langausfit.C  miniTRB_clusterize  plotCalib  plotCalib.C  raw_viewer  test.cal  test_data.root
Root/Macros/: batch_compress.sh
Root/src/: AMS.h  AMS_convert.cpp  AMS_convert.cxx  ASTRA_convert.cpp  ASTRA_convert.cxx  FOOT.h  FOOT_compress.cxx  FOOT_compress_single.cxx  FOOT_convert.cpp  FOOT_single.h  HV_manager.h  PAPERO.cpp  PAPERO.h  PAPERO_compress.cxx  PAPERO_convert.cpp  PAPERO_convert.cxx  PAPERO_info.cpp  PAPERO_info.cxx  PGDAQ.h  PGDAQ_compress.cxx  biascontrol.cxx  biascontrol.hh  biascontrolPI.cpp  biascontrolPI.cxx  calibration.cpp  calibration.cxx  environment.h  event.cpp  event.h  makaMerger.cpp  makaMerger.h  miniTRB.h  miniTRB_clusterize.cxx  miniTRB_cn.cxx  miniTRB_compress.cxx  miniTRB_threshold_scan.cxx  raw_clusterize.cpp  raw_clusterize.cxx  raw_cn.cpp  raw_cn.cxx  (+15 more)
cmake/: dependencies.cmake  submodules.cmake
inc/: PAPERO.h  biascontrol.h  biascontrolPI.h  bmRawToRootConverter.h  cppLibs.h  guiLinkDef.h  miniTRB.h  ocaEvent.h  rootLibs.h  udpSocket.h  viewerGUI.h
json/: README.md  settings_template.json
parameters/: geometry.json
scripts/: analyzeRun.sh  beamReports.sh  bmRawToRootConverter.sh  compile.sh  findRun.sh  findSettings.sh  init.sh  lxplus-image.sh  manage-submodules.sh  runAna.sh  runCalibration.sh
src/: ASTRA_convert.cpp  ASTRA_info.cpp  HEF_convert.cpp  HEF_i2c.cpp  HV_manager.c  PAPERO.cpp  PAPERO.h  PAPERO_convert.cpp  PAPERO_i2c.cpp  PAPERO_info.cpp  biascontrol.cpp  bmApplyCalibration.cxx  bmConvertToFlatTree.cpp  bmRawToRootConverter.cxx  bmToFlatTree.cpp  calibration.cpp  clustering.cpp  dataAnalyzer.cpp  event.cpp  event.h  event_display.cpp  flat_convert.cpp  formatting.cpp  groupBeam.cpp  guiDict.cpp  miniTRB_convert.cpp  ocaEvent.cpp  raw_clusterize.cpp  raw_cn.cpp  raw_threshold_scan.cpp  readOM.cpp  readOM.h  runReport.cpp  runReport_new.cpp  viewerGUI.cpp
